<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_welcome" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_continue"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:alpha="0"
        android:maxEms="6"
        android:text="@string/app_desc"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_agreement"
        android:layout_marginHorizontal="16dp"
        android:alpha="0"
        android:text="@string/btn_continue"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_agreement"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:alpha="0"
        android:paddingHorizontal="8dp"
        android:text="@string/tv_agreement"
        android:textAlignment="center"
        tools:alpha="100" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>