<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.dashboard.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo_greeneye" />

            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/app_name"
                app:fontFamily="@font/ribeye" />
        </LinearLayout>

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln_logo"
            android:hint="@string/hint_search_bar" />

        <TextView
            android:id="@+id/tv_popular"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_bar"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/tv_popular"
            android:textColor="?attr/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_below="@+id/tv_popular"
            android:layout_marginHorizontal="12dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

        <TextView
            android:id="@+id/tv_history"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_popular"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/tv_history"
            android:textColor="?attr/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_history"
            android:layout_marginHorizontal="12dp" />
    </RelativeLayout>

</ScrollView>