<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.result.ResultActivity">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/cd_result_image"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_organs_name"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textColor="?attr/colorSecondary"
        android:transitionName="scientific_name"
        tools:text="@string/sample_scientific_name" />

    <TextView
        android:id="@+id/tv_plant_name"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:transitionName="plant_name"
        tools:text="@string/sample_plant_name" />

    <TextView
        android:id="@+id/tv_scientific_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorSecondary"
        android:textStyle="italic"
        android:transitionName="scientific_name"
        tools:text="@string/sample_scientific_name" />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="?attr/colorSecondary"
        android:transitionName="scientific_name"
        tools:text="@string/sample_scientific_name" />

    <Button
        android:id="@+id/btn_show_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Lihat Info Tanaman" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Kembali" />
</LinearLayout>